--- a/financial-application/tracker/templates/tracker/base.html
+++ b/financial-application/tracker/templates/tracker/base.html
@@ -3,11 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://bootswatch.com/5/litera/bootstrap.min.css" rel="stylesheet">
     <title>Tracker Application</title>
 </head>
 <body>
+
+    {% include 'tracker/navigation.html' %}
+
     {% block content %}
     <h1>Front page</h1>
     {% endblock content %}
+
 </body>
 </html>
