Include a block for navbar

--- a/financial-application/tracker/templates/tracker/base.html
+++ b/financial-application/tracker/templates/tracker/base.html
@@ -7,8 +7,8 @@
     <title>Tracker Application</title>
 </head>
 <body>
-
-    {% include 'tracker/navigation.html' %}
+    {% block navbar %}
+    {% endblock navbar %}
 
     {% block content %}
     <h1>Front page</h1>
