--- a/financial-application/tracker/templates/tracker/dashboard.html
+++ b/financial-application/tracker/templates/tracker/dashboard.html
@@ -1,5 +1,10 @@
 {% extends 'tracker/base.html' %}
 
+{% block navbar %}
+{% include 'tracker/navigation.html' %}
+{% endblock navbar %}
+
+
 {% block content %}
 
     <h1>DISPLAY PAGE</h1>
