--- a/financial-application/tracker/templates/tracker/login.html
+++ b/financial-application/tracker/templates/tracker/login.html
@@ -12,7 +12,7 @@
             </form>
             <div class="pt-3">
                 <small class="text-muted">Need an account?
-                    <a href="#" class="ml-2">Sign Up</a>
+                    <a href="{% url 'signup' %}" class="ml-2">Sign Up</a>
                 </small>
             </div>
         </div>
