--- a/financial-application/tracker/templates/tracker/logout.html
+++ b/financial-application/tracker/templates/tracker/logout.html
@@ -6,7 +6,7 @@
             <h2>You Have Been Logged Out</h2>
             <div class="border-top pt-3">
                 <small class="text-muted">
-                    <a href="#">Login In Again</a>
+                    <a href="{% url 'login' %}">Login In Again</a>
                 </small>
             </div>
         </div>
