--- a/financial-application/tracker/templates/tracker/login.html
+++ b/financial-application/tracker/templates/tracker/login.html
@@ -2,12 +2,14 @@
 
 {% block content %}
 
+{% load crispy_forms_tags %}
+
     <div class="row">
         <div class="col-11 col-md-4 mx-auto mt-5">
             <h1>Log In</h1>
             <form method="post">
                 {% csrf_token %}
-                {{ form }}
+                {{ form|crispy }}
                 <button class="btn btn-primary">Sign In</button>
             </form>
             <div class="pt-3">
