--- a/financial-application/tracker/templates/tracker/signup.html
+++ b/financial-application/tracker/templates/tracker/signup.html
@@ -2,13 +2,15 @@
 
 {% block content %}
 
+{% load crispy_forms_tags %}
+
     <div class="row">
-        <div class="col-11 col-md-4 mx-auto- mt-5">
+        <div class="col-11 col-md-4 mx-auto mt-5">
             <h1>Sign Up</h1>
             
             <form method="post">
                 {% csrf_token %}
-                {{ form }}
+                {{ form|crispy }}
                 <button class="btn btn-primary" type="submit">Sign Up</button>
             </form>
 
